--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container position-relative" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand">
-                    <h1 href="index.html" class="m-0 display-5 text-white"><span class="text-primary">Choix</span>verre</h1>
+                <a href="index.html" class="navbar-brand">
+                    <h1 class="m-0 display-5 text-white"><span class="text-primary">Choix</span>verre</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -85,7 +85,7 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">BLOG</a>
+                                <a href="single.html" class="dropdown-item">Blog Detail</a>
                             </div>
                         </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
