--- a/single.html
+++ b/single.html
@@ -67,7 +67,7 @@
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container position-relative" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
-                <a href="" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <h1 class="m-0 display-5 text-white"><span class="text-primary">Choix</span>verre</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -160,11 +160,7 @@
                 <div class="d-flex flex-column text-left mb-4">
                     <h6 class="text-primary font-weight-normal text-uppercase mb-3">BLOG Page</h6>
                     <h1 class="mb-4 section-title">Diam dolor est ipsum clita lorem</h1>
-                    <div class="d-index-flex mb-2">
-                        <span class="mr-3"><i class="fa fa-user text-primary"></i> Admin</span>
-                        <span class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</span>
-                        <span class="mr-3"><i class="fa fa-comments text-primary"></i> 15</span>
-                    </div>
+
                 </div>
 
                 <div class="mb-5">
@@ -187,9 +183,23 @@
                         dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus
                         ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd
                         dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.</p>
+                    <h3 class="mb-4">Est dolor lorem et ea</h3>
+                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/blog-2.jpg" alt="Image">
+                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam
+                        tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam
+                        dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus
+                        ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd
+                        dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.</p>
+                    <h3 class="mb-4">Est dolor lorem et ea</h3>
+                    <img class="img-fluid w-50 float-right ml-4 mb-3" src="img/blog-2.jpg" alt="Image">
+                    <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam
+                        tempor rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam
+                        dolores at sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos. Invidunt sed diam dolores takimata dolor dolore dolore sit. Sit ipsum erat amet lorem et, magna sea at sed et eos. Accusam eirmod kasd lorem clita sanctus
+                        ut consetetur et. Et duo tempor sea kasd clita ipsum et. Takimata kasd diam justo est eos erat aliquyam et ut. Ea sed sadipscing no justo et eos labore, gubergren ipsum magna dolor lorem dolore, elitr aliquyam takimata sea kasd
+                        dolores diam, amet et est accusam labore eirmod vero et voluptua. Amet labore clita duo et no.</p>
                 </div>
 
-                <div class="mb-5 mx-n3">
+                <!-- <div class="mb-5 mx-n3">
                     <h3 class="mb-4 ml-3 section-title">Related Post</h3>
                     <div class="owl-carousel service-carousel position-relative">
                         <div class="card border-0 mx-3">
@@ -238,9 +248,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="mb-4 section-title">3 Comments</h3>
                     <div class="media mb-4">
                         <img src="img/user.jpg" alt="Image" class="img-fluid mr-3 mt-1" style="width: 45px;">
@@ -269,33 +279,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="bg-light p-5">
-                    <h3 class="mb-4 section-title">Leave a comment</h3>
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name *</label>
-                            <input type="text" class="form-control" id="name">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email *</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="website">Website</label>
-                            <input type="url" class="form-control" id="website">
-                        </div>
 
-                        <div class="form-group">
-                            <label for="message">Message *</label>
-                            <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
-                        </div>
-                        <div class="form-group mb-0">
-                            <input type="submit" value="Leave Comment" class="btn btn-primary px-3">
-                        </div>
-                    </form>
-                </div>
             </div>
 
             <div class="col-lg-4 mt-5 mt-lg-0">
@@ -304,18 +290,7 @@
                     <h3 class="text-primary mb-3">John Doe</h3>
                     <p class="text-white m-0">Conset elitr erat vero dolor ipsum et diam, eos dolor lorem ipsum, ipsum ipsum sit no ut est. Guber ea ipsum erat kasd amet est elitr ea sit.</p>
                 </div>
-                <div class="mb-5">
-                    <form action="">
-                        <div class="input-group">
-                            <input type="text" class="form-control form-control-lg" placeholder="Keyword">
-                            <div class="input-group-append">
-                                <span class="input-group-text bg-transparent text-primary"><i
-                                        class="fa fa-search"></i></span>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="mb-4 section-title">Categories</h3>
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -339,80 +314,23 @@
                             <span class="badge badge-primary badge-pill">98</span>
                         </li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="mb-5">
                     <img src="img/blog-1.jpg" alt="" class="img-fluid">
                 </div>
-                <div class="mb-5">
-                    <h3 class="mb-4 section-title">Recent Post</h3>
-                    <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex flex-column pl-3">
-                            <a class="text-dark mb-2" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            <div class="d-flex">
-                                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                        <img class="img-fluid" src="img/blog-2.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex flex-column pl-3">
-                            <a class="text-dark mb-2" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            <div class="d-flex">
-                                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                        <img class="img-fluid" src="img/blog-3.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex flex-column pl-3">
-                            <a class="text-dark mb-2" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            <div class="d-flex">
-                                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex flex-column pl-3">
-                            <a class="text-dark mb-2" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            <div class="d-flex">
-                                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center border-bottom mb-3 pb-3">
-                        <img class="img-fluid" src="img/blog-2.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex flex-column pl-3">
-                            <a class="text-dark mb-2" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                            <div class="d-flex">
-                                <small class="mr-3"><i class="fa fa-user text-primary"></i> Admin</small>
-                                <small class="mr-3"><i class="fa fa-folder text-primary"></i> Web Design</small>
-                                <small class="mr-3"><i class="fa fa-comments text-primary"></i> 15</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="mb-5">
                     <img src="img/blog-2.jpg" alt="" class="img-fluid">
                 </div>
                 <div class="mb-5">
-                    <h3 class="mb-4 section-title">Tag Cloud</h3>
+                    <h3 class="mb-4 section-title">Nuage de tags</h3>
                     <div class="d-flex flex-wrap m-n1">
-                        <a href="" class="btn btn-outline-primary m-1">Design</a>
-                        <a href="" class="btn btn-outline-primary m-1">Development</a>
-                        <a href="" class="btn btn-outline-primary m-1">Marketing</a>
-                        <a href="" class="btn btn-outline-primary m-1">SEO</a>
-                        <a href="" class="btn btn-outline-primary m-1">Writing</a>
-                        <a href="" class="btn btn-outline-primary m-1">Consulting</a>
+                        <a href="" class="btn btn-outline-primary m-1">hhhhhh</a>
+                        <a href="" class="btn btn-outline-primary m-1">hhhhhh</a>
+                        <a href="" class="btn btn-outline-primary m-1">hhhhhh</a>
+                        <a href="" class="btn btn-outline-primary m-1">hhhhhh</a>
+                        <a href="" class="btn btn-outline-primary m-1">hhhhhh</a>
+                        <a href="" class="btn btn-outline-primary m-1">hhhhhh</a>
                     </div>
                 </div>
                 <div class="mb-5">
