--- a/Projet.html
+++ b/Projet.html
@@ -67,7 +67,8 @@
         <div class="container position-relative" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 display-5 text-white"><span class="text-primary">Choix</span>verre</h1>
+                    <img src="img\logo.png" class="logo">
+                    <!-- <h1 class="m-0 display-5 text-white"><span class="text-primary">Choix</span>verre</h1> -->
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
