--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                         <a href="À propos de nous.html" class="nav-item nav-link">À propos de nous</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
                         <a href="Projet.html" class="nav-item nav-link">Projet</a>
-                        <a href="single.html" class="nav-item nav-link">BLOG</a>
+                        <a href="blog.html" class="nav-item nav-link">Blog</a>
 
                         <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                <a href="blog.html" class="dropdown-item">Blog Detail</a>
                             </div>
                         </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
