--- a/blog.html
+++ b/blog.html
@@ -169,10 +169,10 @@
 
                     <h2 class="mb-4">Pardouche en verre</h2>
                     <img class="img-fluid w-50 float-left mr-4 mb-3" src="img\blog2.jpg" alt="Image">
-                    <p>Pardouche en verre trempé 10 mm poignée en verre exta clair </p>
+                    <p>Pardouche en verre trempé 10 mm poignée en verre exta clair &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 
-                </div>
-                <div>
+                    <!-- </div>
+                <div> -->
                     <h3 class="mb-4">Rénovation</h3>
                     <img class="img-fluid w-50 float-right ml-4 mb-3" src="img\mv1.jpg" alt="Image">
                     <p>Rénovation de royal manssour et mamounia marrakech nos miroirs venissien </p>
